<resources>
    <string name="app_name">UserApp</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="username" />
    <string name="password" />
    <string name="password22">PASSWORD</string>
    <string name="usernameWW">USERNAME</string>
    <string name="buttonE">Button</string>
    <string name="add">ADD</string>
    <string name="display">DISPLAY</string>
    <string name="displaydata">displayData</string>
    <string name="saveinfo">SaveInfo</string>
    <string name="displayW">DISPLAY</string>
    <string name="myText">TextView</string>
    <string name="hhhhhb" />
    <string name="tex">TextView</string>
    <string name="mytext">myText</string>
</resources>
